--- a/admin/index/table.html
+++ b/admin/index/table.html
@@ -417,7 +417,7 @@
             text: {
                 none: "暂时还没有数据哦！"
             }, done: function (obj) {
-                frame_all({"link":[obj,"table1"]},{"message":[1,obj]});//公共运行函数集合
+                frame_all(obj,{"link":"table1"},{"message":[1]});//公共运行函数集合
             }
         });
 
