--- a/admin/index/home/public_info.html
+++ b/admin/index/home/public_info.html
@@ -47,44 +47,44 @@
             , minWidth: 1200
             , cols: [[ //表头
                 {type:"checkbox"}
-                , {field: 'process_name', title: '文档名称',width:"50%", minWidth: 150}
+                , {field: 'doc_name', title: '文档名称',width:"50%", minWidth: 150}
                 , {field: 'up_personal', title: '上传人', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '上传日期', minWidth: 150}
+                , {field: 'up_date', title: '上传日期', minWidth: 150}
             ]]
             ,
             "data": [
                 {
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户1",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 },{
-                    "process_name": '文件1',
+                    "doc_name": '文件1',
                     "up_personal": "用户2",
-                    "Service_monitoring": "2018-12-01"
+                    "up_date": "2018-12-01"
                 }]
             ,
             text: {
