--- a/admin/index/index.html
+++ b/admin/index/index.html
@@ -128,8 +128,8 @@
 <script src="../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/admin/js/main.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/admin/js/common.js" type="text/javascript" charset="utf-8"></script>
-<script src="../../static/admin/js/list.js"></script>
-<script src="../../static/admin/js/nav.js"></script>
+<script src="../../static/admin/js/list.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../static/admin/js/nav.js" type="text/javascript" charset="utf-8"></script>
 <script>
     $("#refresh_home").on('click',function(){
         var homes = document.getElementById('home') ;
@@ -144,6 +144,9 @@
         }
     })
     window.onload = function(){
+        if($(".layui-nav-item a span").length <= 0){
+            location.reload();
+        }
         try{
             var f = $.cookie("f");
             $.cookie("f", null);
