--- a/admin/index/welcome.html
+++ b/admin/index/welcome.html
@@ -326,40 +326,7 @@
                         "src": "./table.html",
                         "time": "2018-04-12"
                     }
-                ],
-                [
-                    {
-                        "item": "通知公告33",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告332",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告333",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告33",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告332",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告333",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    }
                 ]
-
             ],
             "public": [
                 [
@@ -395,28 +362,10 @@
                         "src": "./table.html",
                         "time": "2018-04-12"
                     }
-                ],
-                [
-                    {
-                        "item": "通知公告33",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告332",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    },
-                    {
-                        "item": "通知公告333",
-                        "src": "./table.html",
-                        "time": "2018-04-12"
-                    }
                 ]
-
             ]
         }
-        var h_name = [["need_do","other_do","personal_record"],["announce","sys_info","public_info"]],id=0;
+        var h_name = [["need_do","personal_record"],["announce","public_info"]],id=0;
         getData(data);
         $(".h_more").click(function(){
             var page = $.getUrlParam("p",1);
@@ -435,13 +384,15 @@
             }
 
         })
+
+        //5：welcome数据添加
         function getData(data) {
             addData(h_name[0],data.task);
             addData(h_name[1],data.public);
             function addData(name,d){
                 for(var j=0;j<name.length;j++){
-                    var containers = $("div[h_name='"+name[j]+"'] ul"),n=0;//n: 限制显示信息条数 7 条
-                    containers.html("");
+                    var containers = $("div[h_name='"+name[j]+"'] ul"),n=0;
+                    containers.html("");//清空已有内容，避免数据污染
                     for(var i=0;i<d[j].length;i++){
                         if(n <= 7){//只渲染7条数据（一个数据框内最多只能容纳7条数据）
                             n++;
