fixed bugs 重构frams_all函数，更便于对表格操作

--- a/admin/index/data/network-sys/equip_work.html
+++ b/admin/index/data/network-sys/equip_work.html
@@ -28,7 +28,7 @@
         <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="fas fa-plus"></i></a>
         <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
-    <div class="moreBtn hidden-xs">
+    <div class="hidden-xs" id="moreBar">
         <div class="layui-inline">
             <input class="layui-input" name="search" placeholder="设备拼音码" id="test-table-de" autocomplete="off">
         </div>
