--- a/admin/index/data/network-sys/run_record.html
+++ b/admin/index/data/network-sys/run_record.html
@@ -27,7 +27,7 @@
     <div class="addBtn">
         <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
-    <div class="moreBtn hidden-xs">
+    <div class="hidden-xs"  id="moreBar">
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-input-inline">
                 <input type="text" name="date" id="date" lay-verify="date" placeholder="开始时间" autocomplete="off" class="layui-input">
