--- a/admin/index/data/network-sys/work_time.html
+++ b/admin/index/data/network-sys/work_time.html
@@ -27,7 +27,7 @@
     <div class="addBtn">
         <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="edit"><i class="fas fa-trash-alt"></i></a>
     </div>
-    <div class="moreBtn hidden-xs">
+    <div class="hidden-xs"  id="moreBar">
         <div class="layui-inline">
             <input class="layui-input" name="search" placeholder="设备编号" autocomplete="off">
         </div>
