--- a/admin/index/home/announcement.html
+++ b/admin/index/home/announcement.html
@@ -45,6 +45,9 @@
         table.render({
             elem: '#table'
             , page: true //开启分页
+            , limit:15
+            , loading:true
+            , limits:[15,25,35,45,55,65,75,85,95]
             , toolbar: '#toolBar'
             , height: 'full-25'
             , title: '数据表'
