--- a/admin/index/home/remind.html
+++ b/admin/index/home/remind.html
@@ -56,6 +56,9 @@
         table.render({
             elem: '#table'
             , page: true //开启分页
+            , limit:15
+            , loading:true
+            , limits:[15,25,35,45,55,65,75,85,95]
             , toolbar: '#toolBar'
             , height: 'full-73'
             , title: '数据表'
