--- a/admin/index/admin/basic-management/index-data.html
+++ b/admin/index/admin/basic-management/index-data.html
@@ -41,17 +41,21 @@
     <!--<a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">编辑</a>-->
 <!--</script>-->
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table', function () {
         var table = layui.table;
         //第一个实例
         table.render({
-            elem: '#table'
-            , page: true //开启分页
-            , toolbar: '#toolBar'
-            , height: 'full-25'
-            , title: '数据表'
-            , minWidth: 1200
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             , cols: [[ //表头
                 {type:"checkbox"}
                 , {field: 'guideposts', title: '控制指标',width:"25%", minWidth: 200}
@@ -98,10 +102,7 @@
                     "hospital-index":"99%",
                     "current-state":"2%",
                 }]
-            ,
-            text: {
-                none: "暂时还没有数据哦！"
-            }, done: function (obj) {
+            , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
         });
