--- a/admin/index/data/network-sys/room_record.html
+++ b/admin/index/data/network-sys/room_record.html
@@ -42,27 +42,32 @@
             </div>
     </form>
 </script>
-<script type="text/html" id="bar">
-    <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">过程记录</a>
-</script>
+
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use(['table','form','laydate'], function () {
         var table = layui.table
             ,form = layui.form
             ,laydate = layui.laydate;
+
         laydate.render({
             elem: '#date',
-            type:'date'
+            value:today,
+            theme:"grid"
         });
+
         //第一个实例
         table.render({
-            elem: '#table'
-            , page: true //开启分页
-            , toolbar: '#toolBar'
-            , height: 'full-25'
-            , title: '数据表'
-            , minWidth: 1200
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             , cols: [[ //表头
                  {field: 'process_name', title: '科室', minWidth: 150, sort: true}
                 , {field: 'create_date', title: '台数', minWidth: 150, sort: true}
@@ -86,10 +91,7 @@
                     "work_long": "10H",
                     "stand_long": "15H"
                 }]
-            ,
-            text: {
-                none: "暂时还没有数据哦！"
-            }, done: function (obj) {
+            , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
         });
