--- a/admin/index/life/purchase-management/purchase-gather.html
+++ b/admin/index/life/purchase-management/purchase-gather.html
@@ -60,38 +60,43 @@
     <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">申购单</a>
 </script>
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use(['table','element'], function () {
         var table = layui.table;
           element = layui.element;
         //第一个实例
         table.render({
-            elem: '#table'
-            , page: true //开启分页
-            , toolbar: '#toolBar'
-            , height: 'full-25'
-            , title: '数据表'
-            , minWidth: 1200
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             , cols: [[ //表头
                 {type:"checkbox"}
                 , {field: 'purchase-depart', title: '申购科室',width:"40%", minWidth: 150}
                 , {field: 'device-num', title: '设备数量', minWidth: 400}
                 , {field: 'money', title: '金额', minWidth: 150, sort: true}
             ]]
-            ,
-            text: {
-                none: "暂时还没有数据哦！"
-            }, done: function (obj) {
+            , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
         });
         //第二个表格
         table.render({
-            elem:'#table1'
-            ,page:true
-            ,toolbar:'#toolBar'
-            ,minWidth:1200
-            ,height:'full-25'
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             ,cols:[[
                 {type:'checkbox'}
                 ,{field:'device-name',title:'设备名称',width:'35%',minWidth:200}
@@ -99,27 +104,6 @@
                 ,{field:'device-num',title:'设备数量',minWidth:250}
                 ,{field:'money',title:'金额',minWidth:250,sort:true}
             ]]
-//            ,"data":[
-//                {
-//                    "device-name":"",
-//                    "model":"",
-//                    "device-num":"",
-//                    "money":""
-//                },
-//                {
-//                    "device-name":"",
-//                    "model":"",
-//                    "device-num":"",
-//                    "money":""
-//                },
-//                {
-//                    "device-name":"",
-//                    "model":"",
-//                    "device-num":"",
-//                    "money":""
-//                }
-//            ]
-
         });
     });
 </script>
