--- a/admin/index/system/data-dictionary/major.html
+++ b/admin/index/system/data-dictionary/major.html
@@ -17,7 +17,7 @@
 <body>
 <div class="layui-row">
     <div class="col-xs-12">
-        <table id="table_basic" lay-filter="basic"></table>
+        <table id="table" lay-filter="basic"></table>
     </div>
 </div>
 <script type="text/html" id="toolBar">
@@ -62,16 +62,21 @@
             </form>
 </script>
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table',function(){
         var table = layui.table;
         //方法级渲染
         table.render({
-            elem:'#table_basic'
-            ,page:'true'
-            ,height:'full-25'
-            ,minWidth:1000
-            ,toolbar:'#toolBar'
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             ,cols: [[ //表头
                 {checkbox:true,fixed:true}
                 , {field: 'dictionary-name', title: '字典名称', width: '70%', minWidth: 400}
