--- a/admin/index/system/user-management/role-setting.html
+++ b/admin/index/system/user-management/role-setting.html
@@ -12,7 +12,7 @@
     <!--[if IE 8]>
     <script type="text/javascript" src="../../../../static/admin/js/jquery-1.11.3.min.js"></script>
     <![endif]-->
-    <script src="../../../../static/admin/js/basic.js"></script
+    <script src="../../../../static/admin/js/basic.js"></script>
 </head>
 <body>
 <div class="layui-row">
@@ -46,17 +46,22 @@
     </form>
 </script>
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table',function(){
         var table = layui.table;
 
         //方法级渲染
         table.render({
-            elem:'#table_basic'
-            ,page:true
-            ,height:'full-30'
-            ,minWidth:1000
-            ,toolbar:'#toolBar'
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             ,cols: [[ //表头
                 {checkbox:true,fixed:true}
                 , {field: 'job-number', title: '工号', width: 150}
