--- a/admin/index/system/user-management/user-setting.html
+++ b/admin/index/system/user-management/user-setting.html
@@ -42,17 +42,22 @@
 
 
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
     layui.use('table',function(){
         var table = layui.table;
 
         //方法级渲染
         table.render({
-            elem:'#table_basic'
-            ,page:true
-            ,height:'full-30'
-            ,minWidth:1000
-            ,toolbar:'#toolBar'
+            elem: addTable.elem
+            , page: addTable.page
+            , toolbar: addTable.toolbar
+            , height: addTable.height
+            , title: addTable.title
+            , limit:addTable.limit
+            , limits:addTable.limits
+            , minWidth: addTable.minWidth
+            , text: addTable.text
             ,cols: [[ //表头
                 {checkbox:true,fixed:true}
                 , {field: 'division', title: '部门', minWidth: 200}
