--- a/admin/index/data/network-sys/room_record.html
+++ b/admin/index/data/network-sys/room_record.html
@@ -46,30 +46,10 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['table','form','laydate'], function () {
-        var table = layui.table
-            ,form = layui.form
-            ,laydate = layui.laydate;
-
-        laydate.render({
-            elem: '#date',
-            value:today,
-            theme:"grid"
-        });
-
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
-                 {field: 'process_name', title: '科室', minWidth: 150, sort: true}
+    addTable ={
+        table:{
+            cols: [[ //表头
+                {field: 'process_name', title: '科室', minWidth: 150, sort: true}
                 , {field: 'create_date', title: '台数', minWidth: 150, sort: true}
                 , {field: 'work_long', title: '工作时长', minWidth: 150, sort: true}
                 , {field: 'stand_long', title: '待机时长', minWidth: 150, sort: true}
@@ -94,8 +74,12 @@
             , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
-        });
-    });
+        },
+        date :{
+            elem : "#date"
+        }
+    }
+
 </script>
 </body>
 
