--- a/admin/index/system/system-setup/information-search.html
+++ b/admin/index/system/system-setup/information-search.html
@@ -17,7 +17,7 @@
 <body>
 <div class="layui-row">
     <div class="col-xs-12">
-        <table id="table_basic" lay-filter="test"></table>
+        <table id="table" lay-filter="test"></table>
     </div>
 </div>
 <script type="text/html" id="bar">
@@ -47,92 +47,168 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table',function(){
-        var table = layui.table;
-
-        //方法级渲染
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            ,cols: [[ //表头
-                {checkbox:true,fixed:true}
+//    layui.use('table',function(){
+//        var table = layui.table;
+//
+//        //方法级渲染
+//        table.render({
+//            elem: addTable.elem
+//            , page: addTable.page
+//            , toolbar: addTable.toolbar
+//            , height: addTable.height
+//            , title: addTable.title
+//            , limit:addTable.limit
+//            , limits:addTable.limits
+//            , minWidth: addTable.minWidth
+//            , text: addTable.text
+//            ,cols: [[ //表头
+//                {checkbox:true,fixed:true}
+//                , {field: 'division', title: '部门', minWidth: 100}
+//                , {field: 'device-number', title: '设备编号', minWidth: 150}
+//                , {field:'asset-number',title:'资产编号',minWidth:150}
+//                , {field:'device-name',title:'设备名称',minWidth:150}
+//                , {field:'version',title:'型号',minWidth:80}
+//                , {field:'standard',title:'规格',width:150}
+//                , {field:'date',title:'启用日期',width:150}
+//                , {title:'操作',toolbar:'#bar',align:"center"}
+//            ]]
+//            , "data": [
+//                {
+//                    "division": '病案室',
+//                    "device-number": "17070002500073",
+//                    "asset-number": "99001734",
+//                    "device-name": "更衣柜（三门）",
+//                    "version": "富莱特",
+//                    "date":"2017-07-01"
+//                },
+//                {
+//                    "division": '病案室',
+//                    "device-number": "17070002500073",
+//                    "asset-number": "99001734",
+//                    "device-name": "更衣柜（三门）",
+//                    "version": "富莱特",
+//                    "date":"2017-07-01"
+//                },
+//                {
+//                    "division": '病案室',
+//                    "device-number": "17070002500073",
+//                    "asset-number": "99001734",
+//                    "device-name": "更衣柜（三门）",
+//                    "version": "富莱特",
+//                    "date":"2017-07-01"
+//                },
+//                {
+//                    "division": '病案室',
+//                    "device-number": "17070002500073",
+//                    "asset-number": "99001734",
+//                    "device-name": "更衣柜（三门）",
+//                    "version": "富莱特",
+//                    "date":"2017-07-01"
+//                },
+//                {
+//                    "division": '病案室',
+//                    "device-number": "17070002500073",
+//                    "asset-number": "99001734",
+//                    "device-name": "更衣柜（三门）",
+//                    "version": "富莱特",
+//                    "date":"2017-07-01"
+//                },
+//                {
+//                    "division": '病案室',
+//                    "device-number": "17070002500073",
+//                    "asset-number": "99001734",
+//                    "device-name": "更衣柜（三门）",
+//                    "version": "富莱特",
+//                    "date":"2017-07-01"
+//                }]
+//        });
+//
+//    //监听行工具事件
+//    table.on('tool(test)', function(obj){
+//        var data = obj.data;//获得当前行数据
+//        if(obj.event === 'edit'){//编辑
+//            window.location.href="information-entry.html";
+//        } else if(obj.event === 'detail'){//查看
+//            //do something
+//        }
+//    });
+//    });
+addTable ={
+    table:{
+        cols: [[ //表头
+            {checkbox:true,fixed:true}
                 , {field: 'division', title: '部门', minWidth: 100}
-                , {field: 'device-number', title: '设备编号', minWidth: 150}
+                , {field: 'device-number', title: '设备编号', minWidth: 150,event:"openLink"}
                 , {field:'asset-number',title:'资产编号',minWidth:150}
                 , {field:'device-name',title:'设备名称',minWidth:150}
                 , {field:'version',title:'型号',minWidth:80}
                 , {field:'standard',title:'规格',width:150}
                 , {field:'date',title:'启用日期',width:150}
                 , {title:'操作',toolbar:'#bar',align:"center"}
-            ]]
-            , "data": [
-                {
-                    "division": '病案室',
-                    "device-number": "17070002500073",
-                    "asset-number": "99001734",
-                    "device-name": "更衣柜（三门）",
-                    "version": "富莱特",
-                    "date":"2017-07-01"
-                },
-                {
-                    "division": '病案室',
-                    "device-number": "17070002500073",
-                    "asset-number": "99001734",
-                    "device-name": "更衣柜（三门）",
-                    "version": "富莱特",
-                    "date":"2017-07-01"
-                },
-                {
-                    "division": '病案室',
-                    "device-number": "17070002500073",
-                    "asset-number": "99001734",
-                    "device-name": "更衣柜（三门）",
-                    "version": "富莱特",
-                    "date":"2017-07-01"
-                },
-                {
-                    "division": '病案室',
-                    "device-number": "17070002500073",
-                    "asset-number": "99001734",
-                    "device-name": "更衣柜（三门）",
-                    "version": "富莱特",
-                    "date":"2017-07-01"
-                },
-                {
-                    "division": '病案室',
-                    "device-number": "17070002500073",
-                    "asset-number": "99001734",
-                    "device-name": "更衣柜（三门）",
-                    "version": "富莱特",
-                    "date":"2017-07-01"
-                },
-                {
-                    "division": '病案室',
-                    "device-number": "17070002500073",
-                    "asset-number": "99001734",
-                    "device-name": "更衣柜（三门）",
-                    "version": "富莱特",
-                    "date":"2017-07-01"
-                }]
-        });
-
-    //监听行工具事件
-    table.on('tool(test)', function(obj){
-        var data = obj.data;//获得当前行数据
-        if(obj.event === 'edit'){//编辑
-            window.location.href="information-entry.html";
-        } else if(obj.event === 'detail'){//查看
-            //do something
+        ]]
+        , "data": [
+            {
+                "division": '病案室',
+                "device-number": "17070002500073",
+                "asset-number": "99001734",
+                "device-name": "更衣柜（三门）",
+                "version": "富莱特",
+                "date":"2017-07-01",
+                "link":"./welcome.html",
+                "messages":[
+                    {
+                        name:"名称",
+                        value:"6666666"
+                    },
+                    {
+                        name:"时间",
+                        value:"666666668888"
+                    }
+                ]
+            },{
+                "division": '病案室',
+                "device-number": "17070002500073",
+                "asset-number": "99001734",
+                "device-name": "更衣柜（三门）",
+                "version": "富莱特",
+                "date":"2017-07-01"
+            },{
+                "division": '病案室',
+                "device-number": "17070002500073",
+                "asset-number": "99001734",
+                "device-name": "更衣柜（三门）",
+                "version": "富莱特",
+                "date":"2017-07-01"
+            },{
+                "division": '病案室',
+                "device-number": "17070002500073",
+                "asset-number": "99001734",
+                "device-name": "更衣柜（三门）",
+                "version": "富莱特",
+                "date":"2017-07-01"
+            }]
+        , done: function (obj) {
+            tableFunc({
+                "obj":obj,
+                "addMsg":2,
+                "addLink":"table1"
+            })
         }
-    });
-    });
+    },
+    date :{
+        elem : "#date1",
+        type : "datetime"
+    }
+};
+//table.on('tool(test)', function(obj){
+//    var data = obj.data;//获得当前行数据
+//    if(obj.event === 'edit'){//编辑
+//        window.location.href="information-entry.html";
+//    } else if(obj.event === 'detail'){//查看
+//        //do something
+//    }
+//});
+
 </script>
 </body>
 </html>
