--- a/admin/index/life/purchase-management/department-discuss.html
+++ b/admin/index/life/purchase-management/department-discuss.html
@@ -21,17 +21,13 @@
             width:96.5%;
             height:50px;
             background-color:#eeeeee;
-            margin:0 auto;
             border-radius:5px;
-            margin-top:20px;
-            margin-bottom:20px;
+            margin: 20px auto;
             line-height:50px;
             font-size:18px;
             padding-left:15px;
         }
-        .sign{
-            color:red;
-        }
+
         .layui-form-item{
             margin-bottom:25px
         }
@@ -41,9 +37,9 @@
 <body>
 <form class="layui-form layui-form-pane" action="">
     <div class="layui-row">
-        <div class="title">
-            医学装备申购科室讨论记录表
-        </div>
+        <fieldset class="layui-elem-field layui-field-title">
+            <legend>医学装备申购科室讨论记录表</legend>
+        </fieldset>
         <div class="col-xs-12 col-sm-6">
             <div class="layui-form-item">
                 <label class="layui-form-label">时间<span class="sign">*</span></label>
@@ -66,13 +62,13 @@
         </div>
 
         <div class="col-xs-12 col-sm-6">
-            <div class="layui-form-item">
+            <div class="layui-form-item" pane>
                 <label class="layui-form-label">记录人<span class="sign">*</span></label>
                 <div class="layui-input-block">
 
                 </div>
             </div>
-            <div class="layui-form-item">
+            <div class="layui-form-item" pane>
                 <label class="layui-form-label">参加人员<span class="sign">*</span></label>
                 <div class="layui-input-block">
 
@@ -83,14 +79,11 @@
     <div class="layui-row">
         <div class="col-xs-12">
             <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">备注</label>
+                <label class="layui-form-label">会议内容<span class="sign">*</span></label>
                 <div class="layui-input-block">
                     <textarea placeholder="请输入内容" class="layui-textarea"></textarea>
                 </div>
             </div>
-        </div>
-        <div class="col-xs-12">
-
         </div>
         <div class="col-xs-12">
             <div class="layui-form-item" style="margin-left:35%;margin-top:25px">
