--- a/admin/index/data/network-sys/run_record.html
+++ b/admin/index/data/network-sys/run_record.html
@@ -30,11 +30,7 @@
     <div class="hidden-xs"  id="moreBar">
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-input-inline">
-                <input type="text" name="date" id="date" lay-verify="date" placeholder="开始时间" autocomplete="off" class="layui-input">
-            </div>
-            <span>-</span>
-            <div class="layui-input-inline">
-                <input type="text" name="date1" id="date1" lay-verify="date" placeholder="结束时间" autocomplete="off" class="layui-input">
+                <input type="text" name="date" id="date" lay-verify="date" autocomplete="off" class="layui-input">
             </div>
             <div class="layui-inline">
                 <input class="layui-input" name="search" placeholder="联网仪编号" autocomplete="off">
@@ -51,22 +47,10 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
-                  {type:"checkbox"}
+    addTable ={
+        table:{
+            cols: [[ //表头
+                {type:"checkbox"}
                 , {field: 'equip_room', title: '所在科室', minWidth: 150, sort: true}
                 , {field: 'equip_number', title: '设备编号', minWidth: 150, sort: true}
                 , {field: 'assets_number', title: '资产编号', minWidth: 150}
@@ -116,8 +100,12 @@
             , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
-        });
-    });
+        },
+        date:{
+            elem:"#date",
+            range:true
+        }
+    }
 </script>
 </body>
 
