--- a/admin/index/data/network-sys/work_time.html
+++ b/admin/index/data/network-sys/work_time.html
@@ -43,21 +43,10 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            ,limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
-                  {type:"checkbox"}
+    addTable ={
+        table:{
+            cols: [[ //表头
+                {type:"checkbox"}
                 , {field: 'equip_number', title: '设备编号',width:"20%", minWidth: 150}
                 , {field: 'equip_short', title: '设备简称', minWidth: 150}
                 , {field: 'type_m', title: 'M值类型', minWidth: 150, sort: true}
@@ -114,8 +103,8 @@
             , done: function (obj) {
                 //frame_all({"check":obj},{"back":true},{"link":[obj,"table1"]},{"message":[2,obj]});//公共运行函数集合
             }
-        });
-    });
+        }
+    }
 </script>
 </body>
 
