--- a/admin/index/home/announcement.html
+++ b/admin/index/home/announcement.html
@@ -38,22 +38,9 @@
 <script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['table','layer'], function () {
-        var table = layui.table
-            ,layer = layui.layer;
-
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
+    addTable ={
+        table:{
+            cols: [[ //表头
                 {field: 'announce_type', title: '公告类型', minWidth: 150, sort: true}
                 , {field: 'announce_name', title: '公告名称', width: '43%', minWidth: 400, event: 'openLink'}
                 , {field: 'Release_department', title: '发布部门', minWidth: 150, sort: true}
@@ -99,8 +86,8 @@
             , done: function (obj) {
                 //frame_all(obj,{"tools":["table1","more_detail","详细信息","../show_messages.html"]})
             }
-        });
-    });
+        }
+    }
 </script>
 </body>
 
