--- a/admin/index/home/my_task.html
+++ b/admin/index/home/my_task.html
@@ -35,22 +35,10 @@
 <script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
-                 {field: 'task_name', title: '任务名称',width:"50%", minWidth: 150}
+    addTable ={
+        table:{
+            cols: [[ //表头
+                {field: 'task_name', title: '任务名称',width:"50%", minWidth: 150}
                 , {field: 'task_form', title: '任务来源', minWidth: 150}
                 , {field: 'task_date', title: '安排日期', minWidth: 150, sort: true}
                 , {field: 'guide_personal', title: '指定接受人', minWidth: 150, sort: true}
@@ -96,8 +84,8 @@
             , done: function (obj) {
                 //frame_all(obj,{"tools":["table1","detail","详细信息","../show_messages.html"]})
             }
-        });
-    });
+        }
+    }
 </script>
 </body>
 
