--- a/admin/index/home/public_info.html
+++ b/admin/index/home/public_info.html
@@ -36,27 +36,15 @@
 <script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
+    addTable ={
+        table:{
+            cols: [[ //表头
                 {type:"checkbox"}
                 , {field: 'doc_name', title: '文档名称',width:"50%", minWidth: 150}
                 , {field: 'up_personal', title: '上传人', minWidth: 150, sort: true}
                 , {field: 'up_date', title: '上传日期', minWidth: 150}
             ]]
-            ,
-            "data": [
+            , "data": [
                 {
                     "doc_name": '文件1',
                     "up_personal": "用户1",
@@ -93,10 +81,8 @@
             , done: function (obj) {
 
             }
-        });
-
-
-    });
+        }
+    }
 </script>
 </body>
 
