--- a/admin/index/home/remind.html
+++ b/admin/index/home/remind.html
@@ -25,7 +25,7 @@
                 <li class="layui-this">日期前提醒</li>
                 <li>日期后提醒</li>
             </ul>
-            <div class="layui-tab-content" style="padding:0;">
+            <div class="layui-tab-content">
                 <div class="layui-tab-item layui-show">
                     <table id="table"></table>
                 </div>
@@ -50,30 +50,19 @@
 <script src="../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['table','element'], function () {
-        var table = layui.table
-            ,element = layui.element;
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
+    addTable = {
+        table: [{
+            elem: "#table"
+            , height: 'full-75'
             , cols: [[ //表头
-                {type:"checkbox"}
+                {type: "checkbox"}
                 , {field: 'remind_type', title: '提醒类别', minWidth: 150}
-                , {field: 'remind_msg', title: '提醒信息',width:"50%", minWidth: 150, sort: true}
+                , {field: 'remind_msg', title: '提醒信息', width: "50%", minWidth: 150, sort: true}
                 , {field: 'cut_date', title: '截止日期', minWidth: 150}
                 , {field: 'remind_times', title: '累计提醒(次)', minWidth: 150}
                 , {field: 'remind_end', title: '末次提醒', minWidth: 150}
             ]]
-            ,
-            "data": [
+            , "data": [
                 {
                     "remind_type": '普通提醒',
                     "remind_msg": "新的提醒信息，请查收！",
@@ -97,69 +86,59 @@
                     "remind_end": "2018-11-25"
                 }
             ]
-        });
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
-                {type:"checkbox"}
-                , {field: 'process_name', title: '文档名称',width:"50%", minWidth: 150}
-                , {field: 'create_date', title: '上传人', minWidth: 150, sort: true}
-                , {field: 'Service_monitoring', title: '上传日期', minWidth: 150}
-            ]]
-            ,
-            "data": [
-                {
-                    "activity_name": '100001000010000100001000010001001000010000100001000065456465',
-                    "link": "https://www.baidu.com",
-                    "process_name": "user-0",
-                    "create_date": "user-0",
-                    "Service_monitoring": "2018-12-01",
-                    "cut_date": "城市-0",
-                    "messages": [
-                        {
-                            name: "流程名称",
-                            value: "某一个活动"
-                        },
-                        {
-                            name: "创建日期",
-                            value: "2018-11-23 21：34:00"
-                        }
-                    ]
-                }, {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "link": "./show_messages.html",
-                    "Service_monitoring": "2018-12-01",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
-                },
-                {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "Service_monitoring": "2018-12-01",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
-                },
-                {
-                    "activity_name": 10000,
-                    "process_name": "user-0",
-                    "Service_monitoring": "2018-12-01",
-                    "create_date": "城市-0",
-                    "cut_date": "城市-0"
-                }]
-        });
-
-        //frame_all({"back": false});//框架公共运行函数
-
-    });
+        },
+            {
+                elem: "#table1"
+                , height: 'full-75'
+                , cols: [[ //表头
+                    {type: "checkbox"}
+                    , {field: 'process_name', title: '文档名称', width: "50%", minWidth: 150}
+                    , {field: 'create_date', title: '上传人', minWidth: 150, sort: true}
+                    , {field: 'Service_monitoring', title: '上传日期', minWidth: 150}
+                ]]
+                , "data": [
+                    {
+                        "activity_name": '100001000010000100001000010001001000010000100001000065456465',
+                        "link": "https://www.baidu.com",
+                        "process_name": "user-0",
+                        "create_date": "user-0",
+                        "Service_monitoring": "2018-12-01",
+                        "cut_date": "城市-0",
+                        "messages": [
+                            {
+                                name: "流程名称",
+                                value: "某一个活动"
+                            },
+                            {
+                                name: "创建日期",
+                                value: "2018-11-23 21：34:00"
+                            }
+                        ]
+                    }, {
+                        "activity_name": 10000,
+                        "process_name": "user-0",
+                        "link": "./show_messages.html",
+                        "Service_monitoring": "2018-12-01",
+                        "create_date": "城市-0",
+                        "cut_date": "城市-0"
+                    },
+                    {
+                        "activity_name": 10000,
+                        "process_name": "user-0",
+                        "Service_monitoring": "2018-12-01",
+                        "create_date": "城市-0",
+                        "cut_date": "城市-0"
+                    },
+                    {
+                        "activity_name": 10000,
+                        "process_name": "user-0",
+                        "Service_monitoring": "2018-12-01",
+                        "create_date": "城市-0",
+                        "cut_date": "城市-0"
+                    }]
+            }
+        ]
+    };
 </script>
 </body>
 
