--- a/admin/index/life/purchase-management/write_purchase.html
+++ b/admin/index/life/purchase-management/write_purchase.html
@@ -24,14 +24,19 @@
 </div>
 
 <script type="text/html" id="toolBar">
-    <a class="layui-btn layui-btn-sm layui-btn-warm" lay-event="detail">填表说明</a>
-    <div class="layui-inline">
-        <input class="layui-input" name="search" id="test-table-demoReload" placeholder="设备名称" autocomplete="off">
+    <div class="addBtn">
+        <a class="layui-btn layui-btn-xs layui-btn-warm" lay-event="detail">填表说明</a>
     </div>
-    <div class="layui-inline">
-        <input class="layui-input" name="search" id="test" placeholder="设备简称" autocomplete="off">
+    <div class="hidden-xs" id="moreBar">
+        <div class="layui-inline">
+            <input class="layui-input" name="search" id="test-table-demoReload" placeholder="设备名称" autocomplete="off">
+        </div>
+        <div class="layui-inline">
+            <input class="layui-input" name="search" id="test" placeholder="设备简称" autocomplete="off">
+        </div>
+        <button class="layui-btn" data-type="reload">查找</button>
     </div>
-    <button class="layui-btn" data-type="reload">查找</button>
+
 </script>
 <script type="text/html" id="bar">
     <a class="layui-btn layui-btn-sm layui-btn-normal" lay-event="purchase">申购单</a>
@@ -39,20 +44,9 @@
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../../static/admin/js/tableNormal.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use('table', function () {
-        var table = layui.table;
-        //第一个实例
-        table.render({
-            elem: addTable.elem
-            , page: addTable.page
-            , toolbar: addTable.toolbar
-            , height: addTable.height
-            , title: addTable.title
-            , limit:addTable.limit
-            , limits:addTable.limits
-            , minWidth: addTable.minWidth
-            , text: addTable.text
-            , cols: [[ //表头
+    addTable ={
+        table:{
+            cols: [[ //表头
                 {field: 'eqPmName', title: '设备名称', width: '53%', minWidth: 400, event: 'openLink'}
                 , {field: 'eqPmJc', title: '设备简称', minWidth: 150}
                 , {field: 'eqFlName', title: '卫标分类', minWidth: 150, sort: true}
@@ -77,9 +71,8 @@
             , done: function (obj) {
                 //frame_all(obj,{"link":"table1"},{"message":[1]});//公共运行函数集合
             }
-        });
-
-    });
+        }
+    }
 </script>
 </body>
 
