系统管理新页面

--- a/admin/index/system/system-setup/fjImport.html
+++ b/admin/index/system/system-setup/fjImport.html
@@ -5,7 +5,7 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>设备信息导入</title>
+    <title>设备附件信息导入</title>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/layui/css/layui.css"/>
     <link rel="stylesheet" type="text/css" href="../../../../static/admin/css/admin.css"/>
     <script src="../../../../static/admin/js/jquery-3.3.1.min.js"></script>
@@ -30,7 +30,7 @@
 
 <div class="layui-row">
     <div class="col-xs-12">
-        <div class="title">设备信息导入</div>
+        <div class="title">分区</div>
     </div>
     <div class="col-xs-12">
         <div class="layui-upload" style="margin-top:60px;">
@@ -43,21 +43,21 @@
 
 <script src="../../../../static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script>
-layui.use('upload',function(){
-   var upload = layui.upload;
+    layui.use('upload',function(){
+        var upload = layui.upload;
 
-    //上传文件
-    upload.render({
-        elem:'#selectFile',
-        url:'/upload/',
-        auto:false,
-        bindAction:'#startUploadFile',
-        size:1024*40,//限制文件大小，单位kb
-        done:function(res){
-            console.log(res);
-        }
+        //上传文件
+        upload.render({
+            elem:'#selectFile',
+            url:'/upload/',
+            auto:false,
+            bindAction:'#startUploadFile',
+            size:1024*40,//限制文件大小，单位kb
+            done:function(res){
+                console.log(res);
+            }
+        })
     })
-})
 </script>
 </body>
 </html>
